docs/zh/deployment/datakit.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: datakit
---

apiVersion: v1
kind: Service
metadata:
  name: datakit-service
  namespace: datakit
spec:
  selector:
    app: daemonset-datakit
  ports:
    - protocol: TCP
      port: 9529
      targetPort: 9529

---

apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: daemonset-datakit
  name: datakit
  namespace: datakit
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: daemonset-datakit
  template:
    metadata:
      labels:
        app: daemonset-datakit
      annotations:
        datakit/logs: |
          [
            {
              "disable": true
            }
          ]
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - env:
        - name: HOST_IP
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: status.hostIP
        - name: ENV_K8S_NODE_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: spec.nodeName
        - name: ENV_DATAWAY
          value: https://openway.guance.com?token=tkn_axxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx ## 此处填上 dataway 真实地址
        - name: ENV_GLOBAL_TAGS
          value: host=__datakit_hostname,host_ip=__datakit_ip
        - name: ENV_DEFAULT_ENABLED_INPUTS
          value: cpu,disk,diskio,mem,swap,system,hostobject,net,host_processes,container
        - name: ENV_ENABLE_ELECTION
          value: enable
        - name: ENV_LOG
          value: /var/log/datakit/log
        - name: ENV_HTTP_LISTEN
          value: 0.0.0.0:9529
        - name: ENV_LOG_LEVEL
          value: debug
        - name: ENV_INPUT_DISK_EXCLUDE_DEVICE
          value: /dev/sda1
        - name: ENV_INPUT_DISK_EXTRA_DEVICE
          value : 10.100.14.144:/nfsdata            ## 修改成实际的nfs 目录
        - name: ENV_IPDB
          value: iploc
        - name: HOST_PROC
          value: /rootfs/proc
        - name: HOST_SYS
          value: /rootfs/sys
        - name: HOST_ETC
          value: /rootfs/etc
        - name: HOST_VAR
          value: /rootfs/var
        - name: HOST_RUN
          value: /rootfs/run
        - name: HOST_DEV
          value: /rootfs/dev
        image: pubrepo.jiagouyun.com/datakit/datakit:1.5.6     ## 修改成最新镜像版本
        imagePullPolicy: IfNotPresent
        name: datakit
        ports:
        - containerPort: 9529
          hostPort: 9529
          name: port
          protocol: TCP
        resources:
          limits:
            cpu: "1000m"
            memory: "2Gi"
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /usr/local/datakit/cache
          name: cache
          readOnly: false
        - mountPath: /var/run
          name: run
        - mountPath: /var/lib
          name: lib
        - mountPath: /var/log
          name: log
        - mountPath: /rootfs
          name: rootfs
        - mountPath: /sys/kernel/debug
          name: debugfs
        - mountPath: /usr/local/datakit/data
          name: datakit-ipdb
        - mountPath: /usr/local/datakit/conf.d/db/mysql.conf
          name: datakit-conf
          subPath: mysql.conf
          readOnly: true
        - mountPath: /usr/local/datakit/conf.d/db/redis.conf
          name: datakit-conf
          subPath: redis.conf
          readOnly: true
        - mountPath: /usr/local/datakit/conf.d/db/elasticsearch.conf
          name: datakit-conf
          subPath: elasticsearch.conf
          readOnly: false
        - mountPath: /usr/local/datakit/conf.d/db/tdengine.conf
          name: datakit-conf
          subPath: tdengine.conf
          readOnly: false
        # - mountPath: /usr/local/datakit/conf.d/ddtrace/ddtrace.conf
        #   name: datakit-conf
        #   subPath: ddtrace.conf
        #   readOnly: false
        workingDir: /usr/local/datakit
      hostIPC: true
      hostPID: true
      restartPolicy: Always
      serviceAccount: datakit
      serviceAccountName: datakit
      tolerations:
      - operator: Exists
      volumes:
      - configMap:
          name: datakit-conf
        name: datakit-conf
      - hostPath:
          path: /var/run
        name: run
      - hostPath:
          path: /var/lib
        name: lib
      - hostPath:
          path: /var/log
        name: log
      - hostPath:
          path: /
        name: rootfs
      - hostPath:
          path: /sys/kernel/debug
        name: debugfs
      - hostPath:
          path: /usr/local/datakit/data
        name: datakit-ipdb
      - hostPath:
          path: /root/datakit_cache
        name: cache
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
